<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leotoscana.formulariocontactos.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:textSize="@dimen/tamaño_text"
                android:layout_marginLeft="@dimen/margen_editext"
                android:layout_marginRight="@dimen/margen_editext" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fecha"
                android:textSize="@dimen/tamaño_text"
                android:layout_marginTop="@dimen/margen_editext"
                android:layout_marginLeft="@dimen/margen_editext"
                android:layout_marginRight="@dimen/margen_editext"
                android:layout_weight="1" />

            <DatePicker
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center"
                android:layout_weight="1">

            </DatePicker>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Telefono"
                android:textSize="@dimen/tamaño_text"
                android:layout_marginLeft="@dimen/margen_editext"
                android:layout_marginRight="@dimen/margen_editext"
                android:id="@+id/telefono"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textSize="@dimen/tamaño_text"
                android:layout_marginLeft="@dimen/margen_editext"
                android:layout_marginRight="@dimen/margen_editext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Descripcion"
                    android:textSize="@dimen/tamaño_text"
                    android:layout_marginLeft="@dimen/margen_editext"
                    android:layout_marginRight="@dimen/margen_editext"/>
            </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
        android:text="@string/Boton"
        android:textSize="@dimen/tamaño_text"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>